--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -1,5 +1,5 @@
 section {
-  /* height: 100vh; */
+  min-height: 100vh;
   padding-top: 100px;
   padding-bottom: 50px;
 }
@@ -41,4 +41,7 @@ i {
 
 .layer:hover{
     opacity: 1;
+}
+.exite{
+left: 83.5%;
 }
