--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -29,7 +29,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 p-4" (click)="openLightbox('images/port2.png')">
+            <div class="col-md-4 p-4" (click)="openLightbox('images/port3.png')">
                 <div class="imag position-relative ">
                     <img src="images/port3.png" class="rounded-3" alt="">
                     <div
@@ -38,7 +38,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 p-4 " (click)="openLightbox('images/port2.png')">
+            <div class="col-md-4 p-4 " (click)="openLightbox('images/poert1.png')">
                 <div class="imag position-relative ">
                     <img src="images/poert1.png" class="rounded-3" alt="">
                     <div
@@ -56,7 +56,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 p-4" (click)="openLightbox('images/port2.png')">
+            <div class="col-md-4 p-4" (click)="openLightbox('images/port3.png')">
                 <div class="imag position-relative ">
                     <img src="images/port3.png" class="rounded-3" alt="">
                     <div
@@ -72,11 +72,11 @@
         ,'d-none':displayLightbox==false
     }">
         <div class=" rounded-3">
-            <div class="d-flex justify-content-end">
-                <i class="fa-solid fa-times fs-3 close" (click)="closeLightbox()"></i>
+            <div class=" exite position-relative bottom-50">
+                <i class="fa-solid fa-times fs-3 close p-2 bg-danger rounded-2" (click)="closeLightbox()"></i>
             </div>
             <div class="text-center">
-                <img src="{{ImageSrc}}" class="w-75" alt="">
+                <img src="{{ImageSrc}}" class="w-75 rounded-2" alt="port2">
             </div>
         </div>
     </div>
